# minimal_glfw_bullet

./: CMakeLists.txt  README.md
resources/shaders/: TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader
src/: CMakeLists.txt  glmeshdata.cpp  glmeshdata.h  glshader.cpp  glshader.h  imagedata.cpp  imagedata.h  main.cpp  main_physx.cpp
src_extern/glew-2.1.0/: CMakeLists.txt
